--- a/awsconfigs/apps/pipeline/base/kustomization.yaml
+++ b/awsconfigs/apps/pipeline/base/kustomization.yaml
@@ -6,6 +6,6 @@ bases:
 
 images:
   - name: gcr.io/ml-pipeline/api-server
-    newName: public.ecr.aws/c9e4w0g3/ml-pipeline/api-server
-    newTag: 2.0.0-alpha.3
+    newName: 900100542891.dkr.ecr.us-east-2.amazonaws.com/artistml
+    newTag: api-server-2.0.0-alpha.3-20230114
 
