--- a/charts/apps/kubeflow-pipelines/rds-s3/templates/Deployment/ml-pipeline-kubeflow-Deployment.yaml
+++ b/charts/apps/kubeflow-pipelines/rds-s3/templates/Deployment/ml-pipeline-kubeflow-Deployment.yaml
@@ -102,7 +102,7 @@ spec:
         envFrom:
         - configMapRef:
             name: pipeline-api-server-config-f4t72426kt
-        image: public.ecr.aws/c9e4w0g3/ml-pipeline/api-server:2.0.0-alpha.3
+        image: 900100542891.dkr.ecr.us-east-2.amazonaws.com/artistml:api-server-2.0.0-alpha.3-20230114
         imagePullPolicy: IfNotPresent
         livenessProbe:
           exec:
